text fix, spacing fix

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -119,7 +119,7 @@
 }
 
 .stip-h1 {
-  font-size: 24px;
+  font-size: 26px;
   font-weight: 800;
 }
 
